...
            android:layout_marginBottom="@dimen/textview_dialog_general_message_title_margin_bottom"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="" />

        <TextView
            android:id="@+id/textview_dialog_general_message_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="" />

...
            android:layout_gravity="start"
            app:buttonTint="@drawable/checkbox_selector"
            android:text="@string/label_dialog_general_message_donotshowagain"
            android:textColor="@color/textColor" />

        <ImageView
            android:id="@+id/imageview_dialog_general_message_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/imageview_dialog_general_message_ok_padding_top"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
...
