...
                android:layout_margin="@dimen/imageview_list_item_file_entry_symbol_margin"
                android:padding="@dimen/imageview_list_item_file_entry_symbol_padding"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textview_list_item_file_entry_name"
                android:layout_width="@dimen/textview_list_item_file_entry_name_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_list_item_file_entry_name_margin"
                android:padding="@dimen/textview_list_item_file_entry_name_padding"
                android:layout_weight="4"
                android:textStyle="normal"
                android:text="" />

            <ImageView
                android:id="@+id/imageview_list_item_file_entry_open"
                android:layout_width="@dimen/imageview_list_item_file_entry_open_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/imageview_list_item_file_entry_open_margin"
                android:padding="@dimen/imageview_list_item_file_entry_open_padding"
                android:layout_weight="1"
                android:text="@string/string_open"
...
